# veinborn

./: .coveragerc  .editorconfig  .gitignore  ACTION_FACTORY_COMPLETE.md  CHANGELOG.md  CODE_REVIEW_AND_REFACTORING_PLAN.md  CONTRIBUTING.md  DOCUMENTATION_HEALTH_REPORT.md  DUNGEON_GENERATION_PROMPT.md  EVENT_SYSTEM_IMPLEMENTATION_SUMMARY.md  EXAMPLE_ACTION_FACTORY.md  GAPS_AND_NEXT_STEPS.md  HOW_TO_PLAY.md  LAUNCHER_README.md  LICENSE  MANIFEST.in  MIGRATION.md  MULTIPLAYER_PHASE3_PROGRESS.md  MULTIPLAYER_PROGRESS.md  NAME_ANALYSIS_AND_OPTIONS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_4_SEEDING_COMPLETE.md  QUICKSTART.md  RANDOMNESS_ANALYSIS.md  README.md  REALITY_CHECK.md  REFACTORING_SUMMARY.md  TESTING_ACTION_FACTORY.md  TESTING_INFRASTRUCTURE_ANALYSIS.md  TEST_STATUS_REPORT.md  TEST_SUMMARY.md  TEXTUAL_QUICKSTART.md  brogue  coverage.json  install.sh  profile_bot.py  project.yaml  pyproject.toml  pytest.ini  (+5 more)
.archived/Archive/: BETH_INTEGRATION_PLAN.md  PROJECT_OVERVIEW.md
.archived/analysis/: GAPS_AND_NEXT_STEPS.md  MULTIPLAYER_PHASE3_PROGRESS.md  NAME_ANALYSIS_AND_OPTIONS.md  TESTING_INFRASTRUCTURE_ANALYSIS.md  TEST_STATUS_REPORT.md
.archived/development-prompts/: LUA_AI_BEHAVIORS_PROMPT.md  LUA_EVENT_SYSTEM_PROMPT.md  LUA_INTEGRATION_PROMPT.md  LUA_TEST_FIXES_PROGRESS.md  README.md
.archived/future-multiplayer/: ADR-010-PODMAN-CONTAINER-TECHNOLOGY.md  BROGUE_TURN_SYSTEM.md  (+6 more)
data/: highscores.json
docs/: BOT_REFACTORING_DESIGN.md  BROGUE_CONSOLIDATED_DESIGN.md  CONSOLIDATION_ANALYSIS.md  CONSTANTS_MIGRATION_PLAN.md  CONTENT_CREATION.md  DATA_FILES_GUIDE.md  DEBUG_UI.md  DOCUMENTATION_CONSOLIDATION_2026-01-13.md  DOCUMENTATION_REORGANIZATION_2025-11-05.md  DUNGEON_CONFIGURATION.md  INDEX.md  LAYOUT_QUICKSTART.md  LUA_AI_MODDING_GUIDE.md  LUA_API.md  LUA_EVENT_MODDING_GUIDE.md  MECHANICS_REFERENCE.md  MIGRATION_GUIDE.md  MULTIPLAYER_CHAT.md  MVP_CURRENT_FOCUS.md  MVP_ROADMAP.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  PLAYER_CONFIG_AND_CLASSES.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  REORGANIZATION_2025-11-05.md  START_HERE.md  STATUS_DASHBOARD.md  UI_FRAMEWORK.md  VEINBORN_CONSOLIDATED_DESIGN.md
examples/: demo_seeding.py
scripts/: fix_terminal.sh  profile_bot.py  run_debug.py  run_safe.py
src/: main.py
tests/: README.md  conftest.py  test_event_system.py  test_infrastructure.py  test_stairs_pathfinding.py
(+243 files in other folders)
