[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "veinborn"
version = "0.1.0"
description = "NetHack + SWG Mining + Multiplayer Co-op - A mechanical roguelike"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Veinborn Team"}
]
keywords = ["roguelike", "game", "terminal", "procedural", "mining", "crafting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "textual>=0.45.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "simpleeval>=1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "textual-dev>=1.0.0",
]

[project.scripts]
brogue = "ui.textual.app:main"
brogue-server = "server.run_server:main"
brogue-test-client = "server.test_client:main"

[project.urls]
Homepage = "https://github.com/scottsen/brogue"
Repository = "https://github.com/scottsen/brogue"
Issues = "https://github.com/scottsen/brogue/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, multiple systems)",
    "fuzz: Fuzz/bot tests (automated gameplay)",
    "slow: Slow-running tests",
    "smoke: Smoke tests (basic functionality)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
